test(CouponRepositoryTest): CouponRepositoryTest 수정
CouponPolicyRepositoryTest JPA 쿼리를 사용하기 때문에 EntityManager 제거하고 코드를 단순화시킴